<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsAboutAPP">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/settings_aboutAPP_titleText"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_aboutAPP_AppNameTitleText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/settings_aboutAPP_AppNameText"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_aboutAPP_launchDateTitleText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/settings_aboutAPP_launchDateText"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/settings_aboutAPP_AuthorTitleText"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/author" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings_aboutAPP_AuthorNameTitleText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/settings_aboutAPP_AuthorNameText"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_aboutAPP_AuthorClassTitleText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/settings_aboutAPP_AuthorClassText"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/settings_aboutAPP_ContactTitleText"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_aboutAPP_Contact_phoneTitleText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/settings_aboutApp_phoneNumber"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center_vertical"
                    android:onClick="call"
                    android:paddingVertical="@dimen/setting_subItemPadding"
                    android:text="@string/settings_aboutAPP_Contact_phoneText"
                    android:textColor="@color/settings_aboutAPP_contactTextColor"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_aboutAPP_Contact_emailTitleText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/settings_aboutApp_email"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center_vertical"
                    android:onClick="sendEmail"
                    android:paddingVertical="@dimen/setting_subItemPadding"
                    android:text="@string/settings_aboutAPP_Contact_emailText"
                    android:textColor="@color/settings_aboutAPP_contactTextColor"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>