<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_resetPassword_titleText"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_resetPassword_enterOldPasswordHintText"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/settings_deleteDatabase_password"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="23dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/settings_resetPassword_enterNewPasswordHintText"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/settings_resetPassword_editNew"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="23dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/settings_resetPassword_reenterNewPasswordHintText"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/settings_resetPassword_editNewCheck"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="23dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/settings_deleteDatabase_showPasswordCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_showPasswordCheckboxText"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/setting_resetPassword_confirmBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="confirmChange"
                    android:text="@string/settings_resetPassword_confirmBtnText"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>